Add Spark-sql notebook

--- a/spark_data_wrangling.ipynb
+++ b/spark_data_wrangling.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Wrangling using Pyspark: Imperative Programming Paradigm Technique"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
