build separate columns

--- a/Schema_on_Read.ipynb
+++ b/Schema_on_Read.ipynb
@@ -856,6 +856,485 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's build separate columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|                host|\n",
+      "+--------------------+\n",
+      "|        199.72.81.55|\n",
+      "|unicomp6.unicomp.net|\n",
+      "|      199.120.110.21|\n",
+      "|  burger.letters.com|\n",
+      "|      199.120.110.21|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfParsed.selectExpr(\"parsed['host'] as host\").limit(5).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+\n",
+      "|                host|                date|\n",
+      "+--------------------+--------------------+\n",
+      "|        199.72.81.55|01/Jul/1995:00:00...|\n",
+      "|unicomp6.unicomp.net|01/Jul/1995:00:00...|\n",
+      "|      199.120.110.21|01/Jul/1995:00:00...|\n",
+      "|  burger.letters.com|01/Jul/1995:00:00...|\n",
+      "|      199.120.110.21|01/Jul/1995:00:00...|\n",
+      "+--------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfParsed.selectExpr([\"parsed['host'] as host\", \"parsed['date_time'] as date\"]).limit(5).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fields = [\"host\", \"client_identd\", \"user_id\", \"date_time\", \"method\", \"endpoint\", \"protocol\", \"response_code\", \"content_size\"]\n",
+    "exprs = [ \"parsed['{}'] as {}\".format(field, field) for field in fields]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"parsed['host'] as host\",\n",
+       " \"parsed['client_identd'] as client_identd\",\n",
+       " \"parsed['user_id'] as user_id\",\n",
+       " \"parsed['date_time'] as date_time\",\n",
+       " \"parsed['method'] as method\",\n",
+       " \"parsed['endpoint'] as endpoint\",\n",
+       " \"parsed['protocol'] as protocol\",\n",
+       " \"parsed['response_code'] as response_code\",\n",
+       " \"parsed['content_size'] as content_size\"]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exprs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfClean = dfParsed.selectExpr(*exprs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>host</th>\n",
+       "      <th>client_identd</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>method</th>\n",
+       "      <th>endpoint</th>\n",
+       "      <th>protocol</th>\n",
+       "      <th>response_code</th>\n",
+       "      <th>content_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>199.72.81.55</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:01 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/history/apollo/</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>6245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>unicomp6.unicomp.net</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:06 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/countdown/</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>3985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>199.120.110.21</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:09 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/missions/sts-73/mission-sts-73.html</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>burger.letters.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:11 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/countdown/liftoff.html</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>304</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>199.120.110.21</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:11 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/missions/sts-73/sts-73-patch-small.gif</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4179</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   host client_identd user_id                   date_time  \\\n",
+       "0          199.72.81.55             -       -  01/Jul/1995:00:00:01 -0400   \n",
+       "1  unicomp6.unicomp.net             -       -  01/Jul/1995:00:00:06 -0400   \n",
+       "2        199.120.110.21             -       -  01/Jul/1995:00:00:09 -0400   \n",
+       "3    burger.letters.com             -       -  01/Jul/1995:00:00:11 -0400   \n",
+       "4        199.120.110.21             -       -  01/Jul/1995:00:00:11 -0400   \n",
+       "\n",
+       "  method                                         endpoint  protocol  \\\n",
+       "0    GET                                 /history/apollo/  HTTP/1.0   \n",
+       "1    GET                              /shuttle/countdown/  HTTP/1.0   \n",
+       "2    GET     /shuttle/missions/sts-73/mission-sts-73.html  HTTP/1.0   \n",
+       "3    GET                  /shuttle/countdown/liftoff.html  HTTP/1.0   \n",
+       "4    GET  /shuttle/missions/sts-73/sts-73-patch-small.gif  HTTP/1.0   \n",
+       "\n",
+       "  response_code content_size  \n",
+       "0           200         6245  \n",
+       "1           200         3985  \n",
+       "2           200         4085  \n",
+       "3           304            0  \n",
+       "4           200         4179  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfClean.limit(5).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Popular hosts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>host</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>piweba3y.prodigy.com</td>\n",
+       "      <td>17572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>piweba4y.prodigy.com</td>\n",
+       "      <td>11591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>piweba1y.prodigy.com</td>\n",
+       "      <td>9868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>alyssa.prodigy.com</td>\n",
+       "      <td>7852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>siltb10.orl.mmc.com</td>\n",
+       "      <td>7573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>piweba2y.prodigy.com</td>\n",
+       "      <td>5922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>edams.ksc.nasa.gov</td>\n",
+       "      <td>5434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>163.206.89.4</td>\n",
+       "      <td>4906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>news.ti.com</td>\n",
+       "      <td>4863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>disarray.demon.co.uk</td>\n",
+       "      <td>4353</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   host  count\n",
+       "0  piweba3y.prodigy.com  17572\n",
+       "1  piweba4y.prodigy.com  11591\n",
+       "2  piweba1y.prodigy.com   9868\n",
+       "3    alyssa.prodigy.com   7852\n",
+       "4   siltb10.orl.mmc.com   7573\n",
+       "5  piweba2y.prodigy.com   5922\n",
+       "6    edams.ksc.nasa.gov   5434\n",
+       "7          163.206.89.4   4906\n",
+       "8           news.ti.com   4863\n",
+       "9  disarray.demon.co.uk   4353"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfClean.groupBy(\"host\").count().orderBy(desc(\"count\")).limit(10).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Popular content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>endpoint</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/images/NASA-logosmall.gif</td>\n",
+       "      <td>111331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/images/KSC-logosmall.gif</td>\n",
+       "      <td>89639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/images/MOSAIC-logosmall.gif</td>\n",
+       "      <td>60468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/images/USA-logosmall.gif</td>\n",
+       "      <td>60014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/images/WORLD-logosmall.gif</td>\n",
+       "      <td>59489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/images/ksclogo-medium.gif</td>\n",
+       "      <td>58802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/images/launch-logo.gif</td>\n",
+       "      <td>40871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/shuttle/countdown/</td>\n",
+       "      <td>40279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>/ksc.html</td>\n",
+       "      <td>40226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>/images/ksclogosmall.gif</td>\n",
+       "      <td>33585</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       endpoint   count\n",
+       "0    /images/NASA-logosmall.gif  111331\n",
+       "1     /images/KSC-logosmall.gif   89639\n",
+       "2  /images/MOSAIC-logosmall.gif   60468\n",
+       "3     /images/USA-logosmall.gif   60014\n",
+       "4   /images/WORLD-logosmall.gif   59489\n",
+       "5    /images/ksclogo-medium.gif   58802\n",
+       "6       /images/launch-logo.gif   40871\n",
+       "7           /shuttle/countdown/   40279\n",
+       "8                     /ksc.html   40226\n",
+       "9      /images/ksclogosmall.gif   33585"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfClean.groupBy(\"endpoint\").count().orderBy(desc(\"count\")).limit(10).toPandas()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
