--- a/Schema_on_Read.ipynb
+++ b/Schema_on_Read.ipynb
@@ -1335,6 +1335,396 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Large Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>endpoint</th>\n",
+       "      <th>content_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/images/cdrom-1-95/img0007.jpg</td>\n",
+       "      <td>99981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/shuttle/missions/sts-71/movies/sts-71-launch.mpg</td>\n",
+       "      <td>999424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/shuttle/missions/sts-71/movies/sts-71-launch.mpg</td>\n",
+       "      <td>999424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>/history/apollo/apollo-13/images/index.gif</td>\n",
+       "      <td>99942</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            endpoint content_size\n",
+       "0                     /images/cdrom-1-95/img0007.jpg        99981\n",
+       "1  /shuttle/missions/sts-71/movies/sts-71-launch.mpg       999424\n",
+       "2  /shuttle/missions/sts-71/movies/sts-71-launch.mpg       999424\n",
+       "3         /history/apollo/apollo-13/images/index.gif        99942\n",
+       "4         /history/apollo/apollo-13/images/index.gif        99942\n",
+       "5         /history/apollo/apollo-13/images/index.gif        99942\n",
+       "6         /history/apollo/apollo-13/images/index.gif        99942\n",
+       "7         /history/apollo/apollo-13/images/index.gif        99942\n",
+       "8         /history/apollo/apollo-13/images/index.gif        99942\n",
+       "9         /history/apollo/apollo-13/images/index.gif        99942"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfClean.createOrReplaceTempView(\"cleanlog\")\n",
+    "spark.sql(\"\"\"\n",
+    "SELECT endpoint, content_size\n",
+    "FROM cleanlog\n",
+    "ORDER BY content_size DESC\n",
+    "\"\"\").limit(10).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### As we can see, our results above are not exactly in numerical descending order. This is because the datatype for content_size is a String. Let's fix this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import expr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>host</th>\n",
+       "      <th>client_identd</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>method</th>\n",
+       "      <th>endpoint</th>\n",
+       "      <th>protocol</th>\n",
+       "      <th>response_code</th>\n",
+       "      <th>content_size</th>\n",
+       "      <th>content_size_bytes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>199.72.81.55</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:01 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/history/apollo/</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>6245</td>\n",
+       "      <td>6245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>unicomp6.unicomp.net</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:06 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/countdown/</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>3985</td>\n",
+       "      <td>3985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>199.120.110.21</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:09 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/missions/sts-73/mission-sts-73.html</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4085</td>\n",
+       "      <td>4085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>burger.letters.com</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:11 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/countdown/liftoff.html</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>304</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>199.120.110.21</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>01/Jul/1995:00:00:11 -0400</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>/shuttle/missions/sts-73/sts-73-patch-small.gif</td>\n",
+       "      <td>HTTP/1.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4179</td>\n",
+       "      <td>4179</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   host client_identd user_id                   date_time  \\\n",
+       "0          199.72.81.55             -       -  01/Jul/1995:00:00:01 -0400   \n",
+       "1  unicomp6.unicomp.net             -       -  01/Jul/1995:00:00:06 -0400   \n",
+       "2        199.120.110.21             -       -  01/Jul/1995:00:00:09 -0400   \n",
+       "3    burger.letters.com             -       -  01/Jul/1995:00:00:11 -0400   \n",
+       "4        199.120.110.21             -       -  01/Jul/1995:00:00:11 -0400   \n",
+       "\n",
+       "  method                                         endpoint  protocol  \\\n",
+       "0    GET                                 /history/apollo/  HTTP/1.0   \n",
+       "1    GET                              /shuttle/countdown/  HTTP/1.0   \n",
+       "2    GET     /shuttle/missions/sts-73/mission-sts-73.html  HTTP/1.0   \n",
+       "3    GET                  /shuttle/countdown/liftoff.html  HTTP/1.0   \n",
+       "4    GET  /shuttle/missions/sts-73/sts-73-patch-small.gif  HTTP/1.0   \n",
+       "\n",
+       "  response_code content_size  content_size_bytes  \n",
+       "0           200         6245                6245  \n",
+       "1           200         3985                3985  \n",
+       "2           200         4085                4085  \n",
+       "3           304            0                   0  \n",
+       "4           200         4179                4179  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfCleanTyped = dfClean.withColumn(\"content_size_bytes\", expr(\"cast(content_size as int)\"))\n",
+    "dfCleanTyped.limit(5).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>endpoint</th>\n",
+       "      <th>content_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/shuttle/countdown/video/livevideo.jpeg</td>\n",
+       "      <td>6823936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/statistics/1995/bkup/Mar95_full.html</td>\n",
+       "      <td>3155499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>/statistics/1995/Jun/Jun95_reverse_domains.html</td>\n",
+       "      <td>2973350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>/statistics/1995/Jun/Jun95_reverse_domains.html</td>\n",
+       "      <td>2973350</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          endpoint content_size\n",
+       "0          /shuttle/countdown/video/livevideo.jpeg      6823936\n",
+       "1            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "2            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "3            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "4            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "5            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "6            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "7            /statistics/1995/bkup/Mar95_full.html      3155499\n",
+       "8  /statistics/1995/Jun/Jun95_reverse_domains.html      2973350\n",
+       "9  /statistics/1995/Jun/Jun95_reverse_domains.html      2973350"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfCleanTyped.createOrReplaceTempView(\"cleantypedlog\")\n",
+    "spark.sql(\"\"\"\n",
+    "SELECT endpoint, content_size\n",
+    "FROM cleantypedlog\n",
+    "ORDER BY content_size_bytes desc\n",
+    "\"\"\").limit(10).toPandas()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
