Fix and consolidate data

--- a/Spark_Data_Lake_From_S3.ipynb
+++ b/Spark_Data_Lake_From_S3.ipynb
@@ -262,6 +262,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fix data: Cast payment_date to timestamp "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark.sql.functions as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfPayment = df.withColumn(\"payment_date\", F.to_timestamp(\"payment_date\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- payment_id: integer (nullable = true)\n",
+      " |-- customer_id: integer (nullable = true)\n",
+      " |-- staff_id: integer (nullable = true)\n",
+      " |-- rental_id: integer (nullable = true)\n",
+      " |-- amount: double (nullable = true)\n",
+      " |-- payment_date: timestamp (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfPayment.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------+--------+---------+------+--------------------+\n",
+      "|payment_id|customer_id|staff_id|rental_id|amount|        payment_date|\n",
+      "+----------+-----------+--------+---------+------+--------------------+\n",
+      "|     16050|        269|       2|        7|  1.99|2017-01-24 13:40:...|\n",
+      "|     16051|        269|       1|       98|  0.99|2017-01-25 07:16:...|\n",
+      "|     16052|        269|       2|      678|  6.99|2017-01-28 13:44:...|\n",
+      "|     16053|        269|       2|      703|  0.99|2017-01-28 16:58:...|\n",
+      "|     16054|        269|       1|      750|  4.99|2017-01-29 00:10:...|\n",
+      "+----------+-----------+--------+---------+------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfPayment.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract the month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfPayment = dfPayment.withColumn(\"month\", F.month(\"payment_date\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------+--------+---------+------+--------------------+-----+\n",
+      "|payment_id|customer_id|staff_id|rental_id|amount|        payment_date|month|\n",
+      "+----------+-----------+--------+---------+------+--------------------+-----+\n",
+      "|     16050|        269|       2|        7|  1.99|2017-01-24 13:40:...|    1|\n",
+      "|     16051|        269|       1|       98|  0.99|2017-01-25 07:16:...|    1|\n",
+      "|     16052|        269|       2|      678|  6.99|2017-01-28 13:44:...|    1|\n",
+      "|     16053|        269|       2|      703|  0.99|2017-01-28 16:58:...|    1|\n",
+      "|     16054|        269|       1|      750|  4.99|2017-01-29 00:10:...|    1|\n",
+      "+----------+-----------+--------+---------+------+--------------------+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfPayment.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute aggregate revenue per month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+------------------+\n",
+      "|month|           revenue|\n",
+      "+-----+------------------+\n",
+      "|    4|28559.460000003943|\n",
+      "|    3| 22916.93000000175|\n",
+      "|    2|10601.509999999556|\n",
+      "|    1| 4824.429999999856|\n",
+      "|    5|  514.180000000001|\n",
+      "+-----+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfPayment.createOrReplaceTempView(\"payment\")\n",
+    "spark.sql(\"\"\"\n",
+    "    SELECT month, sum(amount) as revenue\n",
+    "    FROM payment\n",
+    "    GROUP BY month\n",
+    "    ORDER BY revenue DESC\n",
+    "\"\"\").show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
